# PotatOS

./: .gitignore  README.md
notes/: ARM ogólnie.md  Budowanie i Renode.md  OS'y.md  Qemu.md  TODO.md  Untitled.md  Zródła.md  kernel.md  renode.md
notes/.obsidian/: workspace.json
os/: CMakeLists.txt  Makefile  dockerfile  firmware.elf  firmware.map  stm32.resc  stm32f4.resc
os/.cache/clangd/index/: common.h.ECC3DDFD64C5A63E.idx  control.h.432600147B870B91.idx  gpio.c.C4624DC163E4C8B7.idx  gpio.h.E357E122BA95C78B.idx  main.c.E91E45B4E8CC308C.idx  memorymap.h.9EDB5E1ECC9A3D4D.idx  mpu.c.B276158407554CB3.idx  mpu.h.D51A10A3E00189D9.idx  os.c.E0494E85E6FC5BE0.idx  os.h.D3A287939BCAAC94.idx  osDefs.h.15480752C9648B31.idx  osLib.h.0183B669D44973AD.idx  rcc.c.2ABB5D132F9A9C20.idx  rcc.h.2FBAEDC28B03C1A6.idx  ringbuffer.c.0EC1365797F9451B.idx  ringbuffer.h.A3C8D19EF919772E.idx  scb.h.6201F600E2956312.idx  startup.c.E09D10ABB89EA7D4.idx  system_calls.c.5D8C460E0989029E.idx  system_calls.h.569C03D68025E914.idx  systick.c.2021845422A0B253.idx  systick.h.B3687AE9276E3AF8.idx  task.c.60716EB2E43D4BD6.idx  task.h.17B2E0638E8B5AAA.idx  uart.c.EA597A6DF418E177.idx  uart.h.3A6B0A9921495657.idx  utils.h.7A9881D6A4332D8B.idx  vector.c.90FCDDDA47D9F2C3.idx  vector.h.26A4328053C958A2.idx
os/drivers/inc/: gpio.h  rcc.h  ringbuffer.h  systick.h  uart.h  vector.h
os/drivers/src/: gpio.c  rcc.c  ringbuffer.c  systick.c  uart.c  vector.c
os/inc/: common.h  gpio.h  main.h  memorymap.h  rcc.h  systick.h  uart.h
os/kernel/: link.ld
os/kernel/inc/: control.h  mpu.h  os.h  osDefs.h  osLib.h  scb.h  system_calls.h  task.h  utils.h
os/kernel/src/: main.c  mpu.c  startup.c  system_calls.c  task.c
os/renode_portable/: stm32.resc
os/renode_portable/plugins/SystemCModule/lib/: socket-cpp
os/renode_portable/tests/: tests.yaml
os/renode_portable/tools/: dts2repl-version.sh
os/src/: main.c  rcc.c  startup.c  systick.c  uart.c
